LUC023A-228 Fixed the pdf loading error by giving the pdf viewer the full link, added code to makesure the canvas with the pdf page does not overflow over the background of the viewer and added a loading graphic so that the user knows that the viewer is working and not stuck.

--- a/theme-local/openbooks/css/viewerStyle.css
+++ b/theme-local/openbooks/css/viewerStyle.css
@@ -1,7 +1,7 @@
 .viewer {
-    background: gray;
+    background: #595959;
   height: 900px;
-  width: 100%;
+  width: 700px;
   position: relative;
 }
 
@@ -72,3 +72,40 @@
 }
 
 .canvasdiv ::selection { color: transparent;}
+
+.loader {
+  border: 7px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 7px solid #111111;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  display: block;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loading_box {
+  display: flex;
+  flex-direction: column;
+  text-align:center;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  top: 49%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+
+#loadingText {
+  text-align:center;
+  display: block;
+  color: #fff;
+  font-size: large;
+  margin: 10px 0;
+  padding: 10px 0;
+}
